37.Gathering skills are a 1/3 more stingy, and Crafting skills sort their lists by level now.
38.Foreign CharSet localization support (char names, lists.ini (file loading/saving in general), web file editor, misc problems...)
# Build 5.7.1 Release 3/12/2010
1. Bug Fix worth mentioning: custom mxp images restored, fakedb typo
2. AutoMapping system available -- see AWARERANGE in INI file and Control Panel
3. Can now create/destroy/list debugflag and disableflag (same as debug= disable= in coffeemud.ini file -- changes are TEMPORARY!)
4. Channel Commands by themselves now automatically show last X messages where X<=5
5. Channel LAST (previous) messages now append an ellapsed time since the message was sent.
# Build 5.7.2 Release 3/31/2010
1. New Area Type: StdAutoGenInstance, for creating random area instances based on random area generator
2. Player WHERE now displays a more informative table
3. AREAS command now has sorting options.
4. LISTS.INI changed to include weather, sun movement, and hit/damage messages.  
5. Each entry in each list inside LISTS.INI can now hold numerous variable entries for variety now! See the file for examples.
6. MUDGrinder File Manager now has resizeable text area, and will let you choose which filesystem to save your file to (local/vfs/both)
7. Forums are now compatible with SMTP mailing lists.. including very simple threading.  If performance is good, why not move Yahoo groups to one?  
8. When using account system, account creation proceeds directly to new character creation.
9. I3/Intermud3 now supports finger (through WHOIS), and will auto-restart if pinging the router is no longer responsive after an hour.
10.MUDGrinder now has a Ability Components editor
11.Can now delete a journal entirely from the MUDGrinder; also Clan Journals should clear out correctly when Clans are deleted.
12.Can now DISABLE the Java-coded races or classes from the DISABLE entry in the INI file.  Quick way to drop the stock classes or races!